<resources>
    <string name="app_name">Car Controller</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="close_text">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    // Preferences
    <string name="use_bt_title">Use BT</string>
    <string name="use_bt_desc">Use BT or Wi-Fi</string>

    <string name="ssid_title">Wi-Fi SSID</string>
    <string name="ssid_desc">Select Wi-Fi network SSID</string>

    <string name="port_title">Port Number</string>
    <string name="port_desc">Port for communications with car</string>

    <string name="maxrot_title">Max Rotation</string>
    <string name="maxrot_desc">Maximum rotation value</string>

    <string name="lastip_title">Car IP</string>
    <string name="lastip_desc">The car IP</string>

    <string name="sensitivity_title">Sensitivity</string>
    <string name="sensitivity_desc">Rotation sensitivity</string>
    <string-array name="sensitivityArray">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="sensitivityValues">
        <item>high</item>
        <item>medium</item>
        <item>low</item>
    </string-array>

    // UI
    <string name="wheel">Wheel</string>
    <string name="rpm">RPM</string>
    <string name="reverse">Reverse</string>

    // Preferences
    <string name="key_use_bt">use_bt</string>
    <string name="key_ssid">netssid</string>
    <string name="key_portnum">portnum</string>
    <string name="key_rotation">max_rotation</string>
    <string name="key_sensitivity">sensitivity</string>
    <string name="key_lastip">lastip</string>
</resources>
