<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference android:title="@string/ssid_title"
        android:key="@string/key_ssid"
        android:summary="@string/ssid_desc"></EditTextPreference>
    <EditTextPreference android:title="@string/port_title"
        android:key="@string/key_portnum"
        android:summary="@string/port_desc"></EditTextPreference>
    <EditTextPreference android:title="@string/lastip_title"
        android:key="@string/key_lastip"
        android:summary="@string/lastip_desc"></EditTextPreference>
    <EditTextPreference android:title="@string/maxrot_title"
        android:key="@string/key_rotation"
        android:summary="@string/maxrot_desc"></EditTextPreference>
    <ListPreference android:title="@string/sensitivity_title"
        android:summary="@string/sensitivity_desc"
        android:key="@string/key_sensitivity"
        android:defaultValue="medium"
        android:entries="@array/sensitivityArray"
        android:entryValues="@array/sensitivityValues" />
    <CheckBoxPreference android:title="@string/use_bt_title"
        android:key="@string/key_use_bt"
        android:defaultValue="true"
        android:summary="@string/use_bt_desc"></CheckBoxPreference>
</PreferenceScreen>